--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="javascript:(function(){document.body.style['background-color'] = 'red'})()">Red</a>
+<a href="javascript:(function(){document.createElement('script').setAttribute('src','')})()">Red</a>
 
 </body>
 </html>
