--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="javascript:(function(){document.createElement('script').setAttribute('src','')})()">Red</a>
+<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','https://raw.githubusercontent.com/ninth-mind/trollscripts/master/rainbow.js'); document.body.appendChild(a)})()">Red</a>
 
 </body>
 </html>
