--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>trollscripts</title>
 </head>
 <body>
+<h1>something</h1>
 
 <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','JSON.parse(https://raw.githubusercontent.com/ninth-mind/trollscripts/master/rainbow.js)'); document.body.appendChild(a)})()">Red</a>
 
