--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <h1>something</h1>
-
-<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','JSON.parse(https://raw.githubusercontent.com/ninth-mind/trollscripts/master/rainbow.js)'); document.body.appendChild(a)})()">Red</a>
+<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/rainbow.js'); document.body.appendChild(a)})()">Red</a>
 
 </body>
 </html>
