--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>something</h1>
 
-<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/rainbow.js'); document.body.appendChild(a)})()">Red</a>
+<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Debug Your CSS</a>
 
 </body>
 </html>
