--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>trollscripts</title>
+<style>
+  body {
+    font-family: Helvetica;
+    font-size:16px;
+  }
+  .links {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  a {
+    color: black;
+    margin: 1rem;
+    text-decoration: none;
+  }
+  a:hover{
+    text-decoration: underline;
+  }
+</style>
 </head>
 <body>
-<h1>something</h1>
+<h1>Bookmarklets</h1>
+<p>Drag these links into your bookmarks bar. Then you can use them on any site! (That allows bookmarklets)</p>
+<div class="links">
+  <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Debug Your CSS</a>
+  <!-- <a href="#" onclick="debug()">debug</a> -->
 
-<a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Debug Your CSS</a>
-
+</div>
+<script src="scripts/rainbow.js"></script>
 </body>
 </html>
