--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 <body>
 <h1>Bookmarklets</h1>
 <p>Drag these links into your bookmarks bar. Then you can use them on any site! (That allows bookmarklets)</p>
+
 <div class="links">
   <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Debug Your CSS</a>
-  <!-- <a href="#" onclick="debug()">debug</a> -->
+
+  <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Roll</a>
+
+  <a href="#" onclick="roll()">roll</a>
 
 </div>
-<script src="scripts/rainbow.js"></script>
+<script src="scripts/rickroll.js"></script>
 </body>
 </html>
