added goku.html page and fixed animation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 <div class="links">
   <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/rainbow.js'); document.body.appendChild(a)})()">Debug Your CSS</a>
 
-  <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/goku.js'); document.body.appendChild(a)})()">goku</a>
+  <a href="javascript:(function(){var a = document.createElement('script'); a.setAttribute('src','http://ninth-mind.github.io/trollscripts/scripts/goku.js'); document.body.appendChild(a)})()" onclick="goku()">goku</a>
 
 </div>
-<script src="scripts/rickroll.js"></script>
 </body>
 </html>
