--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 <div class="wrapper">
   <h1>Trollscripts</h1>
   <p>Here are some dumb scripts I built in the persuit of knowledge, and laughs. </p>
+  <p class="small">* = bookmarklet (drag into your bookmarks bar to run on other sites.</p>
 
   <ul class="links">
-    <li><a href="#" onclick="rainbow()">* Debug Your CSS</a></li>
+    <li><a href="#" onclick="rainbow()">Debug Your CSS * </a></li>
     <li><a href="views/goku.html">Goku</a></li>
     <li><a href="views/phonenumbers.html">Phone Number Nightmare</a></li>
     <li><a href="test-extension.zip" download>Taco Cat Chrome Extension</a></li>
   </ul>
 
-  <p class="small">* = bookmarklet (drag into your bookmarks bar to run on other sites.</p>
 
 
   <div class="stats">
